--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.scss/">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
-    <title>Vue.js Tutorial L1</title>
+    <title>Vue.js Tutorial L2</title>
 </head>
 
 <body>
-    <h1>Title</h1>
+    <div id="vue-app">
+        <h1>{{name}}</h1>
+    </div>
 
 
-    <script src="js/main.js"></script>
+
+
+    <script src="js/app.js"></script>
 </body>
 
 </html>
