--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,12 @@
 
 <body>
     <div id="vue-app">
-        <h1>{{name}}</h1>
+        <h1>{{greet('night')}}</h1>
+        <p>Name: {{name}}</p>
+        <p>Job: {{job}}</p>
+
+
     </div>
-
-
-
 
     <script src="js/app.js"></script>
 </body>
