--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
 <body>
     <div id="vue-app">
         <h1>{{greet('night')}}</h1>
+        <a v-bind:href="website">The Net Ninja</a>
+        <p v-html="websiteTag"></p>
+
         <p>Name: {{name}}</p>
         <p>Job: {{job}}</p>
 
