--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,14 @@
 
 <body>
     <div id="vue-app">
-        <h1>{{greet('night')}}</h1>
-        <a v-bind:href="website">The Net Ninja</a>
-        <p v-html="websiteTag"></p>
+        <h1>Events</h1>
+        <button v-on:click="add(1)">Add a Year</button>
+        <button v-on:click="subtract(1)">Subtract a Year</button>
+        <button v-on:dblclick="add(10)">Add 10 Years</button>
+        <button v-on:dblclick="subtract(10)">Subtract 10 Years</button>
+        <p>My age is {{age}}</p>
 
-        <p>Name: {{name}}</p>
-        <p>Job: {{job}}</p>
-
-
+        <div id="canvas" v-on:mousemove="updateXY">{{x}}, {{y}}</div>
     </div>
 
     <script src="js/app.js"></script>
