--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,11 @@
 
 <body>
     <div id="vue-app">
-        <h1>Events</h1>
-        <button v-on:click.once="add(1)">Add a Year</button>
-        <button v-on:click="subtract(1)">Subtract a Year</button>
-        <button v-on:dblclick="add(10)">Add 10 Years</button>
-        <button v-on:dblclick="subtract(10)">Subtract 10 Years</button>
-        <p>My age is {{age}}</p>
-
-        <div id="canvas" v-on:mousemove="updateXY">{{x}}, {{y}}</div>
-
-        <a v-on:click.prevent="click" href="http://www.thenetninja.co.uk">The Net Ninja</a>
+        <h1>Keyboard Events</h1>
+        <label for="">Name:</label>
+        <input type="text" v-on:keyup.enter="logName" />
+        <label for="">Age:</label>
+        <input type="text" v-on:keyup.alt.enter="logAge" />
     </div>
 
     <script src="js/app.js"></script>
