--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,12 @@
     <div id="vue-app">
         <h1>Keyboard Events</h1>
         <label for="">Name:</label>
-        <input type="text" v-on:keyup.enter="logName" />
+        <input type="text" v-model="name" />
+        <!--v model attach t oname data field-->
+        <span>{{name}}</span>
         <label for="">Age:</label>
-        <input type="text" v-on:keyup.alt.enter="logAge" />
+        <input type="text" v-model="age" />
+        <span>{{age}}</span>
     </div>
 
     <script src="js/app.js"></script>
