--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,14 @@
 
 <body>
     <div id="vue-app">
-        <h1>Keyboard Events</h1>
-        <label for="">Name:</label>
-        <input type="text" v-model="name" />
-        <!--v model attach t oname data field-->
-        <span>{{name}}</span>
-        <label for="">Age:</label>
-        <input type="text" v-model="age" />
-        <span>{{age}}</span>
+        <h1>Computed Properties</h1>
+        <button v-on:click="a++">Add to A</button>
+        <button v-on:click="b++">Add to B</button>
+        <p>A - {{a}}</p>
+        <p>B - {{b}}</p>
+        <p>Age + A = {{addToA}}</p>
+        <!--Take off parenthesis to use computed properties instead of methods -->
+        <p>Age + B = {{addToB}}</p>
     </div>
 
     <script src="js/app.js"></script>
