--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,27 @@
     <link rel="stylesheet" href="styles/main.scss/">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <title>Vue.js Tutorial L2</title>
+
 </head>
 
 <body>
     <div id="vue-app">
-        <h1>Computed Properties</h1>
-        <button v-on:click="a++">Add to A</button>
-        <button v-on:click="b++">Add to B</button>
-        <p>A - {{a}}</p>
-        <p>B - {{b}}</p>
-        <p>Age + A = {{addToA}}</p>
-        <!--Take off parenthesis to use computed properties instead of methods -->
-        <p>Age + B = {{addToB}}</p>
+        <h1>Dynamic CSS</h1>
+
+        <h2>Example 1</h2>
+        <div v-on:click="available = !available" v-bind:class="{available: available}">
+            <!--negates true and false-->
+            <span>Ryu</span>
+        </div>
+        <!--second one refers to data object in vue instance-->
+
+        <h2>Example 2</h2>
+        <button v-on:click="nearby = !nearby">Toggle nearby</button>
+        <button v-on:click="available = !available">Toggle available</button>
+        <div v-bind:class="compClasses">
+            <span>Ryu</span>
+        </div>
+
     </div>
 
     <script src="js/app.js"></script>
