--- a/src/index.html
+++ b/src/index.html
@@ -12,22 +12,17 @@
 </head>
 
 <body>
-    <div id="vue-app">
-        <!-- Bag Image -->
-        <div id="bag" v-bind:class="{burst: ended}"></div>
+    <h1>Multiple Vue Instances</h1>
+    <div id="vue-app-one">
+        <h2>{{title}}</h2>
+        <p>{{greet}}</p>
+    </div>
 
-        <!-- Bag Health -->
-        <div id="bag-health">
-            <div v-bind:style="{width: health + '%'}"></div>
-        </div>
+    <div id="vue-app-two">
+        <h2>{{title}}</h2>
+        <p>{{greet}}</p> <!-- () is only for methods, not computed-->
 
-        <!-- Game Controls -->
-        <div id="controls">
-            <button v-on:click="punch" v-show="!ended">Punch</button>
-            <button v-on:click="restart">Restart Game</button>
-        </div>
-
-
+        <button v-on:click="changeTitle">Change App One Title</button>
     </div>
 
     <script src="js/app.js"></script>
