L15 Intro to Components

--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,16 @@
 </head>
 
 <body>
-    <h1>Multiple Vue Instances</h1>
+    <h1>Components</h1>
+
     <div id="vue-app-one">
-        <h2>{{title}}</h2>
-        <p>{{greet}}</p>
+        <h2>Vue App One</h2>
+        <greeting></greeting> <!-- From component -->
     </div>
 
     <div id="vue-app-two">
-        <h2>{{title}}</h2>
-        <p>{{greet}}</p> <!-- () is only for methods, not computed-->
-
-        <button v-on:click="changeTitle">Change App One Title</button>
+        <h2>Vue App Two</h2>
+        <greeting></greeting> <!-- Can be used in multiple places -->
     </div>
 
     <script src="js/app.js"></script>
