--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,17 @@
 </head>
 
 <body>
-    <h1>Components</h1>
 
-    <div id="vue-app-one">
-        <h2>Vue App One</h2>
-        <greeting></greeting> <!-- From component -->
+    <div id="vue-app">
+        <h2>Refs</h2>
+        <input type="text" ref="input" />
+        <button v-on:click="readRefs">Submit</button>
+        <p>Your favorite food: {{output}}</p>
+
+        <div ref="test">Hello</div>
     </div>
 
-    <div id="vue-app-two">
-        <h2>Vue App Two</h2>
-        <greeting></greeting> <!-- Can be used in multiple places -->
-    </div>
+
 
     <script src="js/app.js"></script>
 </body>
